intTests/test_type_errors/unify004.log.good
Loading file "unify004.saw"
Type errors:
  unify004.saw:8:9-8:10: This expression is not a function (type is Int)
  unify004.saw:8:9-8:12: but is applied here to one argument.
  unify004.saw:7:9-7:10: The type Int arises from the type of this term

FAILED
